backend/balance-reader.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: balancereader
spec:
  selector:
    matchLabels:
      app: balancereader
  template:
    metadata:
      labels:
        app: balancereader
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: reader
        image: gcr.io/bank-of-anthos/balancereader:v0.1.0
        volumeMounts:
        - name: publickey
          mountPath: "/root/.ssh"
          readOnly: true
        resources:
          requests:
            cpu: 200m
            memory: 256Mi
          limits:
            cpu: 300m
        readinessProbe:
          httpGet:
            path: /ready
            port: 7000
          initialDelaySeconds: 5
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /healthy
            port: 7000
          initialDelaySeconds: 120
          periodSeconds: 5
      volumes:
      - name: publickey
        secret:
          secretName: jwt-key
          items:
          - key: jwtRS256.key.pub
            path: publickey
---
apiVersion: v1
kind: Service
metadata:
  name: balancereader
spec:
  type: ClusterIP
  selector:
    app: balancereader
  ports:
  - name: http
    port: 7000
    targetPort: 7000
