backend/ledger-db.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ledger-db
spec:
  selector:
    matchLabels:
      app: ledger-db
  template:
    metadata:
      labels:
        app: ledger-db
    spec:
      containers:
        - name: postgres
          image: gcr.io/bank-of-anthos/ledger-db:v0.1.0
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: ledger-db
spec:
  type: ClusterIP
  selector:
    app: ledger-db
  ports:
  - name: postgres
    port: 5432
    targetPort: 5432
