backend/ledger-writer.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ledgerwriter
  namespace: arc-backend
spec:
  selector:
    matchLabels:
      app: ledgerwriter
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: ledgerwriter
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: writer
        image: gcr.io/bank-of-anthos/ledgerwriter:v0.1.0
        volumeMounts:
        - name: publickey
          mountPath: "/root/.ssh"
          readOnly: true
        resources:
          requests:
            cpu: 200m
            memory: 1Gi
          limits:
            cpu: 300m
            memory: 2Gi
        readinessProbe:
          httpGet:
            path: /ready
            port: 6060
          initialDelaySeconds: 5
          periodSeconds: 5
      volumes:
      - name: publickey
        secret:
          secretName: jwt-key
          items:
          - key: jwtRS256.key.pub
            path: publickey
---
apiVersion: v1
kind: Service
metadata:
  name: ledgerwriter
  namespace: arc-backend
spec:
  type: ClusterIP
  selector:
    app: ledgerwriter
  ports:
  - name: http
    port: 6060
    targetPort: 6060
