backend/transaction-history.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transactionhistory
  namespace: arc-backend
spec:
  selector:
    matchLabels:
      app: transactionhistory
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: transactionhistory
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: history
        image: gcr.io/bank-of-anthos/transactionhistory:v0.1.0
        volumeMounts:
        - name: publickey
          mountPath: "/root/.ssh"
          readOnly: true
        resources:
          requests:
            cpu: 200m
            memory: 512Mi
          limits:
            cpu: 300m
        readinessProbe:
          httpGet:
            path: /ready
            port: 7070
          initialDelaySeconds: 5
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /healthy
            port: 7070
          initialDelaySeconds: 120
          periodSeconds: 5
      volumes:
      - name: publickey
        secret:
          secretName: jwt-key
          items:
          - key: jwtRS256.key.pub
            path: publickey
---
apiVersion: v1
kind: Service
metadata:
  name: transactionhistory
  namespace: arc-backend
spec:
  type: ClusterIP
  selector:
    app: transactionhistory
  ports:
  - name: http
    port: 7070
    targetPort: 7070
